--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
@@ -126,7 +126,7 @@
                 <div class="user">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            
+                            <a class="dropdown-item" asp-controller="Home" asp-action="Logout">Logout</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -158,7 +158,7 @@
                         <div class="modal-dialog modal-dialog-centered modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Please input below CMS Details</h5>
+                                    <h5 class="modal-title" id="exampleModalLabel">Please input below details</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <form id="cms-form" asp-action="Admin_AddSkills" asp-controller="Home" method="post">
