--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
@@ -121,7 +121,7 @@
                 <div class="user">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            
+                            <a class="dropdown-item" asp-controller="Home" asp-action="Logout">Logout</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
