--- a/MVC/CIPlatform/CIPlatform/Views/Home/Registration.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Registration.cshtml
@@ -208,7 +208,7 @@
 
                         </div>
                     </div>
-                    <button type="submit" class="btn-reg" onclick="return Validate()">Register</button>
+                    <button type="submit" class="btn-reg">Register</button>
                     <br>
                     <br>
 
@@ -229,15 +229,16 @@
     </div>
     <script>
 
-        function Validate() {
-            var password = document.getElementById("pass").value;
-            var confirmPassword = document.getElementById("confirmpass").value;
-            if (password != confirmPassword) {
-                alert("Password do not match");
-                return false;
-            }
-            return true;
-        }</script>
+        //function Validate() {
+        //    var password = document.getElementById("pass").value;
+        //    var confirmPassword = document.getElementById("confirmpass").value;
+        //    if (password != confirmPassword) {
+        //        alert("Password do not match");
+        //        return false;
+        //    }
+        //    return true;
+        //}
+        </script>
 
         <script>
     if ( window.history.replaceState ) {
