--- a/MVC/CIPlatform/CIPlatform/Views/Home/AdminEditMission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/AdminEditMission.cshtml
@@ -155,7 +155,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                     <div class="user">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
-                                
+                                <a class="dropdown-item" asp-controller="Home" asp-action="Logout">Logout</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="#">Action</a></li>
                                     <li><a class="dropdown-item" href="#">Another action</a></li>
