--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
@@ -1,8 +1,11 @@
-﻿.uname1
-{
-    background:none;
-    border:none;
-    margin-bottom:15%;
+﻿.entire-down-div {
+    margin-top: -1%;
+}
+
+.uname1 {
+    background: none;
+    border: none;
+    margin-bottom: 15%;
 }
 
 
@@ -37,19 +40,16 @@
     color: rgb(149, 146, 146);
 }
 
-.fav-btn
-{
-    width:50px;
-    height:50px;
-    background:none;
-    border:none;
-    
-
+.fav-btn {
+    width: 50px;
+    height: 50px;
+    background: none;
+    border: none;
 }
 
 .clicked {
-        background-color: red;
-    }
+    background-color: red;
+}
 /*No mission found */
 .combine {
     text-align: center;
@@ -107,7 +107,6 @@
     border-right: 1px solid rgb(236, 234, 234);
     height: 100%;
     padding-top: 22px;
-    
 }
 
 .filterbox-sort {
@@ -115,7 +114,6 @@
     height: 100%;
     padding-top: 22px;
     margin-left: 52%;
-
 }
 
 .country {
@@ -133,12 +131,11 @@
     border-bottom-right-radius: 21px;
     width: 150px;
     margin-top: -47%;
-    text-align:center;
-    margin-left:0%;
-    opacity:0.9;
-    
-    
+    text-align: center;
+    margin-left: 0%;
+    opacity: 0.9;
 }
+
 .declined {
     background-color: red;
     height: 30%;
@@ -153,6 +150,7 @@
     margin-left: 0%;
     opacity: 0.9;
 }
+
 .closed {
     background-color: darkorange;
     height: 40%;
@@ -176,10 +174,10 @@
     color: white;
     border: 1px solid black;
     border-radius: 21px;
-    margin-top:-50%;
-    margin-left:57%;
+    margin-top: -50%;
+    margin-left: 57%;
     color: white;
-    position:absolute;
+    position: absolute;
     text-align: center;
 }
 
@@ -198,11 +196,9 @@
 .heart {
     margin-top: 26%;
     margin-left: 23%;
-    
 }
 
 .fa-heart {
-
     font-size: 25px;
     color: white;
 }
@@ -214,33 +210,28 @@
     border-radius: 50%;
     display: inline-block;
     margin-top: 3%;
-    margin-left: 88%;
+    margin-left: 188%;
     background-color: black;
     opacity: 0.7;
 }
 
 .imgrec {
     margin-left: -10%;
-    
 }
 
 
 .appliedlst {
-
     background-color: green;
     height: 30%;
-    
     color: white;
     border: 1px solid green;
     border-top-right-radius: 21px;
     border-bottom-right-radius: 21px;
     width: 150px;
     margin-top: -225px;
-     
     text-align: center;
     margin-left: 13px;
     opacity: 0.9;
-    
 }
 
 .declinedlst {
@@ -272,6 +263,7 @@
     margin-left: 3%;
     opacity: 0.9;
 }
+
 .citydivbtnlst {
     background-color: black;
     opacity: 0.7;
@@ -302,6 +294,7 @@
     margin-top: 55%;
     margin-left: -8%;
 }
+
 .recommend-cirlst {
     height: 45px;
     width: 45px;
@@ -327,8 +320,8 @@
     border-radius: 24px;
     color: #F88634;
     margin-top: 5%;
-    
 }
+
 .col-lg-5 {
     display: flex;
     margin-left: 8%;
@@ -455,7 +448,6 @@ hr {
     width: 100%;
     object-fit: cover;
     margin-left: 0%;
-    
 }
 
 .missions {
@@ -550,15 +542,17 @@ hr {
     margin-top: 1.3%;
     border-radius: 24px;
     border: none;
+    background: none;
 }
 
 #lstbtn {
     width: 3%;
-    height: -8%;
+    border-radius: 24px;
     margin-top: 1.3%;
     margin-left: 0.5%;
     border: none;
-    background-color: white;
+    background-color: none;
+    background: none;
 }
 
 
@@ -592,7 +586,8 @@ hr {
 }
 
 .pbar {
-    margin-left: 10%;
+    width: 150px;
+    margin-left: 5%;
     margin-top: 2%
 }
 
@@ -602,11 +597,7 @@ hr {
 
 
 
-
-
 /* List View */
-
-
 .card-img {
     height: 100%;
     object-fit: cover;
@@ -697,7 +688,6 @@ hr {
     color: grey;
     margin-left: 25%;
     margin-top: -0.3%;
-
 }
 
 .lst-row-lst {
@@ -755,9 +745,8 @@ hr {
         filter: drop-shadow(1px 1px 4px gold);
     }
 
-i .fas fa-heart.clicked
-{
-    color:red;
+i .fas fa-heart.clicked {
+    color: red;
 }
 /* Grid View MQ */
 @media only screen and (min-width: 360px) and (max-width: 767px) {
@@ -867,6 +856,14 @@ i .fas fa-heart.clicked
     .dateline {
         margin-top: -8%;
     }
+
+    .filterbox-sort {
+        width: 0%;
+        height: 100%;
+        padding-top: 22px;
+        margin-left: 0%;
+    }
+
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -899,11 +896,16 @@ i .fas fa-heart.clicked
 
     #lstbtn {
         width: 3%;
-        height: -8%;
-        margin-top: 1.5%;
-        margin-left: 2%;
+        border-radius: 24px;
+        margin-top: -4%;
+        margin-left: 0.5%;
         border: none;
-        background-color: white;
+        background-color: none;
+        background: none;
+    }
+
+    .btn1 {
+        margin-left: 100%;
     }
 }
 
@@ -935,11 +937,12 @@ i .fas fa-heart.clicked
 
     #lstbtn {
         width: 3%;
-        height: -8%;
-        margin-top: 1%;
-        margin-left: 2%;
+        border-radius: 24px;
+        margin-top: -4.5%;
+        margin-left: 0.5%;
         border: none;
-        background-color: white;
+        background-color: none;
+        background: none;
     }
 
     .hr-btn {
@@ -1002,11 +1005,12 @@ i .fas fa-heart.clicked
 
     #lstbtn {
         width: 3%;
-        height: -8%;
-        margin-top: 1%;
-        margin-left: 2%;
+        border-radius: 24px;
+        margin-top: -4.5%;
+        margin-left: 0.5%;
         border: none;
-        background-color: white;
+        background-color: none;
+        background: none;
     }
 
     .hr-btn {
@@ -1069,11 +1073,13 @@ i .fas fa-heart.clicked
 
     #lstbtn {
         width: 3%;
-        height: -8%;
-        margin-top: 1%;
+        margin-top: -5%;
         margin-left: 2%;
         border: none;
-        background-color: white;
+    }
+
+    a.nav-link {
+        font-size: 20px;
     }
 
     .hr-btn {
@@ -1707,6 +1713,79 @@ i .fas fa-heart.clicked
     }
 }
 
+@media only screen and (min-width: 360px) and (max-width: 469px) {
+    .recommend-cir {
+        height: 40px;
+        width: 40px;
+        background-color: #686A6C;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: -15%;
+        margin-left: 1%;
+        background-color: black;
+        opacity: 0.7;
+    }
+
+    .imgrec {
+        margin-left: -10%;
+    }
+}
+
+@media only screen and (min-width: 470px) and (max-width: 499px) {
+    .recommend-cir {
+        height: 40px;
+        width: 40px;
+        background-color: #686A6C;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: 3%;
+        margin-left: 82%;
+        background-color: black;
+        opacity: 0.7;
+    }
+
+    .imgrec {
+        margin-left: -5%;
+        margin-top: 2%;
+    }
+}
+
+@media only screen and (min-width: 360px) and (max-width: 499px) {
+    .circle {
+        height: 40px;
+        width: 40px;
+        background-color: black;
+        opacity: 0.7;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: -35%;
+        margin-left: 82%;
+    }
+
+    .fa-heart {
+        font-size: 23px;
+        color: white;
+        margin-left: 2%;
+        margin-top: 3%;
+    }
+
+    .entire-down-div {
+        margin-top: 3%;
+        margin-left: -5%;
+    }
+    .pbar {
+        width: 80px;
+        margin-left: 5%;
+        margin-top: 2%
+    }
+    .filterbox-sort {
+        width: 100%;
+        height: 100%;
+        padding-top: 22px;
+        margin-left: 0%;
+    }
+}
+
 @media only screen and (min-width: 500px) and (max-width: 767px) {
 
     /* Search and mission filters css */
@@ -1747,6 +1826,52 @@ i .fas fa-heart.clicked
     .all-dropdown {
         margin-left: 30%;
     }
+
+    .circle {
+        height: 45px;
+        width: 45px;
+        background-color: black;
+        opacity: 0.7;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: -35%;
+        margin-left: 85%;
+    }
+
+    .fa-heart {
+        font-size: 23px;
+        color: white;
+        margin-left: 4%;
+        margin-top: 3%;
+    }
+
+    .recommend-cir {
+        height: 45px;
+        width: 45px;
+        background-color: #686A6C;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: 3%;
+        margin-left: 85%;
+        background-color: black;
+        opacity: 0.7;
+    }
+
+    .imgrec {
+        margin-left: -5%;
+        margin-top: 2%;
+    }
+
+    .entire-down-div {
+        margin-top: 9%;
+        margin-left: 5%;
+    }
+    .filterbox-sort {
+        width: 100%;
+        height: 100%;
+        padding-top: 22px;
+        margin-left: 0%;
+    }
 }
 
 
@@ -1773,11 +1898,11 @@ i .fas fa-heart.clicked
     }
 
     .user-avatar {
-        width: 5vw;
-        height: 5vw;
+        width: 4vw;
+        height: 4vw;
         border-radius: 50%;
-        margin-left: 850%;
-        margin-top: 0%;
+        margin-left: 230%;
+        margin-top: 1%;
     }
 
     .dropdown-username {
@@ -1890,6 +2015,56 @@ i .fas fa-heart.clicked
         text-decoration: none;
         color: grey;
     }
+
+    .circle {
+        height: 30px;
+        width: 30px;
+        background-color: black;
+        opacity: 0.7;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: -35%;
+        margin-left: 83%;
+    }
+
+    .fa-heart {
+        font-size: 15px;
+        color: white;
+        margin-left: -1%;
+        margin-top: 2%;
+    }
+
+    .heart {
+        margin-top: 15%;
+        margin-left: 25%;
+    }
+
+    .recommend-cir {
+        height: 28px;
+        width: 28px;
+        background-color: #686A6C;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: 3%;
+        margin-left: 84%;
+        background-color: black;
+        opacity: 0.7;
+    }
+
+    .imgrec {
+        margin-left: -50%;
+        margin-top: -20%;
+    }
+
+    .entire-down-div {
+        margin-top: 5%;
+        margin-left: -5%;
+    }
+    .pbar {
+        width: 100px;
+        margin-left: 5%;
+        margin-top: 2%
+    }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1150px) {
@@ -1915,7 +2090,7 @@ i .fas fa-heart.clicked
         width: 4vw;
         height: 4vw;
         border-radius: 50%;
-        margin-left: 1150%;
+        margin-left: 230%;
         margin-top: 1%;
     }
 
@@ -2028,6 +2203,68 @@ i .fas fa-heart.clicked
         text-decoration: none;
         color: grey;
     }
+
+    .circle {
+        height: 45px;
+        width: 45px;
+        background-color: black;
+        opacity: 0.7;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: -35%;
+        margin-left: 85%;
+    }
+
+    .fa-heart {
+        font-size: 23px;
+        color: white;
+        margin-left: 4%;
+        margin-top: 3%;
+    }
+
+    .recommend-cir {
+        height: 45px;
+        width: 45px;
+        background-color: #686A6C;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: 1%;
+        margin-left: 85%;
+        background-color: black;
+        opacity: 0.7;
+    }
+
+    .imgrec {
+        margin-left: -10%;
+    }
+
+    .entire-down-div {
+        margin-top: 1%;
+        margin-left: -5%;
+    }
+}
+
+@media only screen and (min-width: 1151px) and (max-width: 1199px) {
+    .recommend-cir {
+        height: 45px;
+        width: 45px;
+        background-color: #686A6C;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: 3%;
+        margin-left: 84%;
+        background-color: black;
+        opacity: 0.7;
+    }
+
+    .imgrec {
+        margin-left: -10%;
+    }
+
+    .entire-down-div {
+        margin-top: 5%;
+        margin-left: -5%;
+    }
 }
 
 @media only screen and (min-width: 1151px) and (max-width: 1200px) {
@@ -2050,11 +2287,11 @@ i .fas fa-heart.clicked
     }
 
     .user-avatar {
-        width: 5vw;
-        height: 5vw;
+        width: 4vw;
+        height: 4vw;
         border-radius: 50%;
-        margin-left: 800%;
-        margin-top: 0%;
+        margin-left: 230%;
+        margin-top: 1%;
     }
 
     .dropdown-username {
@@ -2166,10 +2403,105 @@ i .fas fa-heart.clicked
         text-decoration: none;
         color: grey;
     }
+
+    .circle {
+        height: 45px;
+        width: 45px;
+        background-color: black;
+        opacity: 0.7;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: -35%;
+        margin-left: 83%;
+    }
+
+    .fa-heart {
+        font-size: 23px;
+        color: white;
+        margin-left: 4%;
+        margin-top: 3%;
+    }
+
+    .entire-down-div {
+        margin-top: 5%;
+    }
 }
 
+@media only screen and (min-width: 1200px) {
+    .recommend-cir {
+        height: 45px;
+        width: 45px;
+        background-color: #686A6C;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: 3%;
+        margin-left: 88%;
+        background-color: black;
+        opacity: 0.7;
+    }
 
-@media only screen and (min-width: 1201px) and (max-width: 1554px) {
+    .imgrec {
+        margin-left: -10%;
+    }
+}
+
+@media only screen and (min-width: 1201px) and (max-width: 1379px) {
+
+    .user-avatar {
+        width: 4vw;
+        height: 4vw;
+        border-radius: 50%;
+        margin-left: 650%;
+        margin-top: 1%;
+    }
+
+    .circle {
+        height: 45px;
+        width: 45px;
+        background-color: black;
+        opacity: 0.7;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: -30%;
+        margin-left: 83%;
+    }
+
+    .fa-heart {
+        font-size: 23px;
+        color: white;
+        margin-left: 4%;
+        margin-top: 3%;
+    }
+
+    .recommend-cir {
+        height: 45px;
+        width: 45px;
+        background-color: #686A6C;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: -15%;
+        margin-left: 1%;
+        background-color: black;
+        opacity: 0.7;
+    }
+
+    .imgrec {
+        margin-left: -10%;
+    }
+
+    .entire-down-div {
+        margin-top: 5%;
+        margin-left: -5%;
+    }
+
+    .pbar {
+        width: 100px;
+        margin-left: 5%;
+        margin-top: 2%
+    }
+}
+
+@media only screen and (min-width: 1380px) and (max-width: 1554px) {
     .navbar {
         margin-top: 1%;
         width: 100%;
@@ -2189,10 +2521,10 @@ i .fas fa-heart.clicked
     }
 
     .user-avatar {
-        width: 5vw;
-        height: 5vw;
+        width: 4vw;
+        height: 4vw;
         border-radius: 50%;
-        margin-left: 800%;
+        margin-left: 430%;
         margin-top: 1%;
     }
 
@@ -2240,5 +2572,41 @@ i .fas fa-heart.clicked
 
     .all-dropdown {
         margin-left: 30%;
+    }
+
+    .circle {
+        height: 45px;
+        width: 45px;
+        background-color: black;
+        opacity: 0.7;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: -35%;
+        margin-left: 85%;
+    }
+
+    .recommend-cir {
+        height: 45px;
+        width: 45px;
+        background-color: #686A6C;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: 1%;
+        margin-left: 85%;
+        background-color: black;
+        opacity: 0.7;
+    }
+
+    .imgrec {
+        margin-left: -10%;
+    }
+
+    .entire-down-div {
+        margin-top: -3%;
+    }
+    .pbar {
+        width: 100px;
+        margin-left: 5%;
+        margin-top: 2%
     }
 }
